# 8-damo-ai

./: .dockerignore  .env.local  .gitignore  Dockerfile  FASTAPI_QUICKSTART.md  HOW_TO_USE.md  KAFKA_CONNECTION.md  README.md  UPDATE.md  dev.sh  docker-compose.dev.yml  docker-compose.yml  ecosystem.ai.config.js  main.py  prometheus.yml  prometheus_test.sh  pyproject.toml  pytest.ini  requirements.txt  run.dev.sh  run.prod.sh  run.test.sh  run_dev.sh  run_test.sh  shared.sh
.github/workflows/: CI.yml  ci-cd.yml  cicd.yml  cicd_argoCD.yml  core-service-deploy.yml  deploy-dev.yml  deploy.yml  deploy.yml.disabled  gateway-deploy.yml  integrate.yml  manual_test.yml  python-ci.yml
codedeploy/: appspec.yml
codedeploy/cd-hooks/: after_install.sh  validate.sh
gateway/: Dockerfile  main.py
scripts/: before_install.sh  deploy_bigbang.sh  start.sh  validate.sh
services/core_service/: Dockerfile
services/iterative_discussion/: Dockerfile
services/recommendation/: Dockerfile
shared/database/: db_manager.py
shared/enums/: user_enums.py
shared/logging/: logger.py
shared/monitoring/: __init__.py  langfuse_client.py
shared/schemas/: dining_data.py  dining_session.py  recommendations_request.py  recommendations_response.py  recommended_item.py  restaurant_fix_request.py  restaurant_fix_response.py  restaurant_vote_result.py  review_data.py  stream_schema.py  update_persona_db_request.py  update_persona_db_response.py  user_data.py
shared/state/: discussion_state.py  recommendation_state.py
shared/stream/: service.py
shared/utils/: client.py  (+1 more)
test/: conftest.py
(+15 files in other folders)
