[tool.poetry]
name = "ai-pipeline"
version = "0.1.0"
description = ""
authors = ["jerry", "hayden"]
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"
fastapi = "^0.128.0"
uvicorn = { extras = ["standard"], version = "^0.40.0" }
langgraph = "^1.0.6"
langfuse = "^3.12.0"
pytest = "^9.0.2"
httpx = "^0.28.1"
pydantic = "^2.12.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
